--- a/css/history.css
+++ b/css/history.css
@@ -143,7 +143,7 @@ header img .logo {
     border-collapse: collapse;
     box-shadow: 0 5px 10px grey;
     background-color: var(--white);
-    text-align: left;
+    text-align: center;
     overflow: hidden;
     position: relative;
     max-width: 900px;
@@ -164,7 +164,7 @@ header img .logo {
 }
 
 .td{
-    padding: 1rem 2rem; 
+    padding: 1rem 2rem;
 }
 
 .tr:nth-child(even){
