--- a/css/history.css
+++ b/css/history.css
@@ -139,6 +139,14 @@ header img .logo {
 /* End Navbar */
 
 /* Start Table */
+.center h1{
+	color: var(--secondary);
+	font-size: 3rem;
+	text-align: center;
+  padding-bottom: 20px;
+  padding-top: 50px;
+}
+
 .table{
     border-collapse: collapse;
     box-shadow: 0 5px 10px grey;
@@ -150,7 +158,7 @@ header img .logo {
     width: 80%;
     border-radius: 6px;
     padding: 30px;
-    margin: 8% auto;
+    margin: 2% auto;
 }
 .thead{
     box-shadow: 0 5px 10px grey;
